# Portfolio

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.example.py  launcher.py  pyproject.toml
.github/workflows/: ruff.yml
assets/css/: main.css
templates/sections/: home.html
